--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,33 @@
   <groupId>org.tyss.sms</groupId>
   <artifactId>appiumworkspace</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<configuration>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+			
+		</plugins>
+	</build>
+
 <dependencies>
 <!-- ADD YOUR DEPENDENCY HERE AFTER-->
 
@@ -28,6 +55,17 @@
     <artifactId>testng</artifactId>
     <version>7.6.1</version>
 </dependency>
+
+<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>5.2.2</version>
+		</dependency>
+<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.2</version>
+		</dependency>
 
 
 
